<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtview_dummy"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAppearance="?android:attr/textAppearanceSmall" >

        <requestFocus/></TextView>

        <TextView
            android:id="@+id/txtview_app_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_service"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" >

            <ToggleButton
                android:id="@+id/tglbtn_enabled"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="100"
                android:checked="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff="Disabled"
                android:textOn="Enabled" >

            </ToggleButton>

            <CheckBox
                android:id="@+id/chkbox_autostart"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="50"
                android:focusable="false"
                android:text="@string/chkbox_autostart"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtview_app_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_mode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radgrp_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radbtn_always"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:focusable="false"
                android:text="@string/radbtn_always" />

            <RadioButton
                android:id="@+id/radbtn_askme"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:focusable="false"
                android:text="@string/radbtn_askme" />

        </RadioGroup>

        <TextView
            android:id="@+id/txtview_app_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:padding="6dip" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/txtview_settings_order"
                    android:text="@string/settings_order"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/radgrp_order"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radbtn_order1"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:focusable="false"
                        android:text="@string/radbtn_order1" />

                    <RadioButton
                        android:id="@+id/radbtn_order2"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:focusable="false"
                        android:text="@string/radbtn_order2" />

                    <RadioButton
                        android:id="@+id/radbtn_order3"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:focusable="false"
                        android:text="@string/radbtn_order3" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:minLines="2"
                    android:paddingRight="10dp"
                    android:text="@string/settings_length"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtxt_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow android:layout_weight="1" >

                <TextView
                    android:paddingRight="10dp"
                    android:text="@string/settings_interval1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtxt_interval1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow android:layout_weight="1" >

                <TextView
                    android:paddingRight="10dp"
                    android:text="@string/settings_interval2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edtxt_interval2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
